<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    >

    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_latitude" />
        
        <TextView
            android:id="@+id/geo_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_longitude" />
        
        <TextView
            android:id="@+id/geo_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_altitude" />
        
        <TextView
            android:id="@+id/geo_altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_accuracy" />
        
        <TextView
            android:id="@+id/geo_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_altitude_accuracy" />
        
        <TextView
            android:id="@+id/geo_altitude_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:layout_marginLeft="20dp"
        android:orientation="vertical" >
        <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/label_address" />
	        
	        <TextView
	            android:id="@+id/geo_address"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	             />
        
   	 	</LinearLayout>
    </LinearLayout>

</LinearLayout>
